--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   logger: ^2.2.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
