--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   logger: ^2.2.0
   email_validator: ^2.1.17
   flutter_sound: ^9.4.6
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/UploadButton.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
