--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   email_validator: ^2.1.17
   flutter_sound: ^9.4.6
   flutter_svg: ^2.0.9
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/UploadButton.svg
+    - assets/images/ThumbUp.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
