--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   logger: ^2.2.0
+  tab_container: ^3.5.2
+  video_player: ^2.8.6
 
 dev_dependencies:
   flutter_test:
