--- a/capstone_project/ios/Runner/Info.plist
+++ b/capstone_project/ios/Runner/Info.plist
@@ -12,6 +12,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need microphone access for uploading audio</string>
 	<key>CFBundleName</key>
 	<string>capstone_project</string>
 	<key>CFBundlePackageType</key>
