--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   loading_indicator: ^3.1.1
   permission_handler: ^9.2.0
   path_provider: ^2.1.3
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
